cmake_minimum_required(VERSION 2.0)

PROJECT(NODE)

STRING(TOLOWER ${CMAKE_BUILD_TYPE} NODE_BUILD_TYPE) 

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++11 -O0 -g3 -Wall -D_DEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=c++11 -O3 -Wall")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(3rd)
ADD_SUBDIRECTORY(src)
